[tool.poetry]
name = "blockchain"
version = "0.1.0"
description = ""
authors = ["Tatsu015 <tatsumi.soichiro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ecdsa = "^0.18.0"
pandas = "^2.1.4"
fastapi = "^0.105.0"
uvicorn = "^0.24.0.post1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
